[package]
name = "oracle-postprocess"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = [ "derive" ] }
clap_derive = "4.5.18"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = [ "blocking" ] }
serde = "1.0.215"
serde_json = "1.0.133"
xmltree = "0.11.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
