[package]
name = "oracle-postprocess"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = [ "derive" ] }
clap_derive = "4.5.18"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.44.2", features = ["rt", "net", "process", "macros", "rt-multi-thread", "io-util", "fs", "sync", "time"] }
futures = "0.3"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"]}
quick-xml = "0.38.3"
sha2 = "0.10.9"
serde_derive = "1.0.226"
base64 = "0.22.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
